--- a/src/loadbalancers/waf-application-gateway-resources.json
+++ b/src/loadbalancers/waf-application-gateway-resources.json
@@ -25,7 +25,7 @@
     }
   },
   "variables": {
-    "applicationGatewayName": "es-app-gateway",
+    "applicationGatewayName": "[concat(parameters('applicationGatewaySettings').namespacePrefix, 'app-gateway')]",
     "applicationGatewayId": "[resourceId('Microsoft.Network/applicationGateways',variables('applicationGatewayName'))]",
     "wafEnabledOptions": {
       "Enabled": true,
@@ -36,7 +36,7 @@
   "resources": [
     {
       "apiVersion": "2015-06-15",
-      "name": "es-internal-lb",
+      "name": "[concat(parameters('networkSettings').namespacePrefix, '-int-lb')]",
       "type": "Microsoft.Network/loadBalancers",
       "location": "[parameters('networkSettings').location]",
       "tags": {
@@ -65,10 +65,10 @@
             "name": "es-http-internal",
             "properties": {
               "frontendIPConfiguration": {
-                "id": "[concat(resourceId('Microsoft.Network/loadBalancers','es-internal-lb'),'/frontendIPConfigurations/LBFE')]"
+                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', concat(parameters('networkSettings').namespacePrefix, '-int-lb')),'/frontendIPConfigurations/LBFE')]"
               },
               "backendAddressPool": {
-                "id": "[concat(resourceId('Microsoft.Network/loadBalancers','es-internal-lb'),'/backendAddressPools/LBBE')]"
+                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', concat(parameters('networkSettings').namespacePrefix, '-int-lb')),'/backendAddressPools/LBBE')]"
               },
               "protocol": "Tcp",
               "frontendPort": 9200,
@@ -76,7 +76,7 @@
               "enableFloatingIP": false,
               "idleTimeoutInMinutes": 5,
               "probe": {
-                "id": "[concat(resourceId('Microsoft.Network/loadBalancers','es-internal-lb'),'/probes/es-probe-internal-http')]"
+                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', concat(parameters('networkSettings').namespacePrefix, '-int-lb')),'/probes/es-probe-internal-http')]"
               }
             }
           },
@@ -84,10 +84,10 @@
             "name": "es-transport-internal",
             "properties": {
               "frontendIPConfiguration": {
-                "id": "[concat(resourceId('Microsoft.Network/loadBalancers','es-internal-lb'),'/frontendIPConfigurations/LBFE')]"
+                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', concat(parameters('networkSettings').namespacePrefix, '-int-lb')),'/frontendIPConfigurations/LBFE')]"
               },
               "backendAddressPool": {
-                "id": "[concat(resourceId('Microsoft.Network/loadBalancers','es-internal-lb'),'/backendAddressPools/LBBE')]"
+                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', concat(parameters('networkSettings').namespacePrefix, '-int-lb')),'/backendAddressPools/LBBE')]"
               },
               "protocol": "Tcp",
               "frontendPort": 9300,
@@ -113,7 +113,7 @@
     {
       "apiVersion": "2015-06-15",
       "type": "Microsoft.Network/publicIPAddresses",
-      "name": "es-app-gateway-ip",
+      "name": "[concat(variables('applicationGatewayName'), '-pip')]",
       "location": "[parameters('networkSettings').location]",
       "tags": {
         "provider": "[toUpper(parameters('elasticTags').provider)]"
@@ -124,14 +124,14 @@
     },
     {
       "apiVersion": "2016-08-01",
-      "name": "es-app-gateway",
+      "name": "[variables('applicationGatewayName')]",
       "type": "Microsoft.Network/applicationGateways",
       "location": "[parameters('networkSettings').location]",
       "tags": {
         "provider": "[toUpper(parameters('elasticTags').provider)]"
       },
       "dependsOn": [
-        "[concat('Microsoft.Network/publicIPAddresses/', 'es-app-gateway-ip')]"
+        "[concat('Microsoft.Network/publicIPAddresses/', variables('applicationGatewayName'),  '-pip')]"
       ],
       "properties": {
         "sku": {
@@ -141,7 +141,7 @@
         },
         "sslCertificates": [
           {
-            "name": "es-app-gateway-sslcert",
+            "name": "[concat(variables('applicationGatewayName'),  '-sslcert')]",
             "properties": {
               "data": "[parameters('applicationGatewaySettings').certBlob]",
               "password": "[parameters('applicationGatewaySettings').certPassword]"
@@ -150,7 +150,7 @@
         ],
         "gatewayIPConfigurations": [
           {
-            "name": "es-app-gateway-ip",
+            "name": "[concat(variables('applicationGatewayName'), '-ip')]",
             "properties": {
               "subnet": {
                 "id": "[concat(resourceId(parameters('networkSettings').resourceGroup, 'Microsoft.Network/virtualNetworks',parameters('networkSettings').name), '/subnets/', parameters('networkSettings').applicationGatewaySubnet.name)]"
@@ -160,17 +160,17 @@
         ],
         "frontendIPConfigurations": [
           {
-            "name": "es-app-gateway-fip",
+            "name": "[concat(variables('applicationGatewayName'), '-fip')]",
             "properties": {
               "PublicIPAddress": {
-                "id": "[resourceId('Microsoft.Network/publicIPAddresses','es-app-gateway-ip')]"
+                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('applicationGatewayName'), '-pip'))]"
               }
             }
           }
         ],
         "frontendPorts": [
           {
-            "name": "es-app-gateway-fport",
+            "name": "[concat(variables('applicationGatewayName'), '-fport')]",
             "properties": {
               "Port": 9200
             }
@@ -190,7 +190,7 @@
         ],
         "backendHttpSettingsCollection": [
           {
-            "name": "es-app-gateway-httpsettings",
+            "name": "[concat(variables('applicationGatewayName'), '-httpsettings')]",
             "properties": {
               "Port": 9200,
               "Protocol": "Http",
@@ -200,17 +200,17 @@
         ],
         "httpListeners": [
           {
-            "name": "es-app-gateway-httplistener",
+            "name": "[concat(variables('applicationGatewayName'), '-httplistener')]",
             "properties": {
               "FrontendIPConfiguration": {
-                "Id": "[concat(variables('applicationGatewayId'), '/frontendIPConfigurations/es-app-gateway-fip')]"
+                "Id": "[concat(variables('applicationGatewayId'), '/frontendIPConfigurations/', variables('applicationGatewayName'), '-fip')]"
               },
               "FrontendPort": {
-                "Id": "[concat(variables('applicationGatewayId'), '/frontendPorts/es-app-gateway-fport')]"
+                "Id": "[concat(variables('applicationGatewayId'), '/frontendPorts/', variables('applicationGatewayName'), '-fport')]"
               },
               "Protocol": "Https",
               "SslCertificate": {
-                "Id": "[concat(variables('applicationGatewayId'), '/sslCertificates/es-app-gateway-sslcert')]"
+                "Id": "[concat(variables('applicationGatewayId'), '/sslCertificates/', variables('applicationGatewayName'), '-sslcert')]"
               }
             }
           }
@@ -221,13 +221,13 @@
             "properties": {
               "RuleType": "Basic",
               "httpListener": {
-                "id": "[concat(variables('applicationGatewayId'), '/httpListeners/es-app-gateway-httplistener')]"
+                "id": "[concat(variables('applicationGatewayId'), '/httpListeners/', variables('applicationGatewayName'), '-httplistener')]"
               },
               "backendAddressPool": {
                 "id": "[concat(variables('applicationGatewayId'), '/backendAddressPools/LBBE')]"
               },
               "backendHttpSettings": {
-                "id": "[concat(variables('applicationGatewayId'), '/backendHttpSettingsCollection/es-app-gateway-httpsettings')]"
+                "id": "[concat(variables('applicationGatewayId'), '/backendHttpSettingsCollection/', variables('applicationGatewayName'), '-httpsettings')]"
               }
             }
           }
