--- a/src/settings/ubuntuSettings.json
+++ b/src/settings/ubuntuSettings.json
@@ -20,12 +20,6 @@
             "description" : "Shared VM settings"
         }
     },
-    "phoneHomeSettings": {
-        "type": "object",
-        "metadata": {
-            "description": "Deployment details sent back to our CRM, only needed when deploying from the marketplace, optional in the ARM template"
-        }
-    },
     "topologySettings": {
         "type": "object",
         "metadata": {
@@ -56,7 +50,7 @@
   },
   "variables": {
     "nodesTemplateUrl": "[concat(parameters('templateBaseUrl'), 'partials/node-resources.json')]",
-    "namespacePrefix": "[parameters('topologySettings').vmHostNamePrefix]",
+    "namespacePrefix": "[parameters('topologySettings').namespacePrefix]",
     "dataNodeShortOpts": {
       "No": "z",
       "Yes": ""
@@ -88,7 +82,6 @@
       "[concat(parameters('templateBaseUrl'), 'scripts/elasticsearch-ubuntu-install.sh')]",
       "[concat(parameters('templateBaseUrl'), 'scripts/kibana-install.sh')]",
       "[concat(parameters('templateBaseUrl'), 'scripts/vm-disk-utils-0.1.sh')]",
-      "[concat(parameters('templateBaseUrl'), 'scripts/user-information.sh')]",
       "[concat(parameters('templateBaseUrl'), 'scripts/data-node-install.sh')]"
     ],
     "ubuntuSkus": {
@@ -139,7 +132,7 @@
             "fileUris": "[variables('ubuntuScripts')]"
           },
           "protectedSettings": {
-            "commandToExecute": "[concat('bash data-node-install.sh -', variables('dataNodeShortOpt'), variables('commonShortOpts'), variables('commonInstallParams'), ' -U \"http://app-lon02.marketo.com/index.php/leadCapture/save2\" -I \"813-MAM-392\" -c \"', parameters('phoneHomeSettings').company, '\" -e \"', parameters('phoneHomeSettings').email, '\" -f \"', parameters('phoneHomeSettings').firstName, '\" -g \"', parameters('phoneHomeSettings').lastName, '\" -t \"', parameters('phoneHomeSettings').jobTitle, '\" -s \"', parameters('phoneHomeSettings').topology, '\" -o \"', parameters('phoneHomeSettings').country, '\"')]"
+            "commandToExecute": "[concat('bash data-node-install.sh -', variables('dataNodeShortOpt'), variables('commonShortOpts'), variables('commonInstallParams'))]"
           }
         },
         "kibana": {
@@ -191,15 +184,5 @@
         }
       }
     }
-  ],
-  "outputs": {
-    "kibana": {
-      "value": "[reference('elasticsearch-nodes').outputs.kibana.value]",
-      "type": "string"
-    },
-    "jumpboxssh": {
-      "value": "[reference('elasticsearch-nodes').outputs.jumpboxssh.value]",
-      "type": "string"
-    }
-  }
+  ]
 }
