--- a/src/settings/ubuntuSettings.json
+++ b/src/settings/ubuntuSettings.json
@@ -64,20 +64,13 @@
       "[concat(parameters('templateBaseUrl'), 'scripts/vm-disk-utils-0.1.sh')]",
       "[concat(parameters('templateBaseUrl'), 'scripts/data-node-install.sh')]"
     ],
-    "ubuntuSkus": {
-      "2": "14.04.5-LTS",
-      "5": "16.04-LTS",
-      "6": "16.04-LTS"
-    },
-    "ubuntuSku": "[variables('ubuntuSkus')[substring(parameters('esSettings').version, 0, 1)]]",
     "ubuntuSettings": {
       "imageReference": {
         "publisher": "Canonical",
         "offer": "UbuntuServer",
-        "sku": "[variables('ubuntuSku')]",
+        "sku": "16.04-LTS",
         "version": "latest"
       },
-      "managementPort": "22",
       "extensionSettings": {
         "master": {
           "publisher": "Microsoft.Azure.Extensions",
@@ -89,18 +82,6 @@
           },
           "protectedSettings": {
             "commandToExecute": "[concat('bash elasticsearch-ubuntu-install.sh -x', variables('commonShortOpts'), variables('commonInstallParams'))]"
-          }
-        },
-        "client": {
-          "publisher": "Microsoft.Azure.Extensions",
-          "type": "CustomScript",
-          "typeHandlerVersion": "2.0",
-          "autoUpgradeMinorVersion": true,
-          "settings": {
-            "fileUris": "[variables('ubuntuScripts')]"
-          },
-          "protectedSettings": {
-            "commandToExecute": "[concat('bash elasticsearch-ubuntu-install.sh -y', variables('commonShortOpts'), variables('commonInstallParams'))]"
           }
         },
         "data": {
